Fixed formatting on question page to handle div overflows correctly

--- a/static/css/sharedStyles.css
+++ b/static/css/sharedStyles.css
@@ -13,3 +13,11 @@ a {
 .yScroll {
   overflow-y: scroll;
 }
+
+.autoOverflow {
+  overflow: auto;
+}
+
+.heightMinusNav{
+    height: calc(100% - 49.5px);
+}
